--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           pointer-events: all;
         }
         
-        .focus circle {
+        .focus circle { 
           fill: #F1F3F3;
           stroke: #6F257F;
           stroke-width: 5px;
@@ -154,6 +154,7 @@
     </style>
   </head>
   <body>
+    <a href="Terror_Data.html">Terror Data Detail</a>
     <div id="weatherDetail">
     </div>
 <script type="text/javascript">
@@ -500,7 +501,7 @@ function loadWeatherDetailGraph(key, data) {
 
 </script>
 
-    <div id="terror_list">
+   <!--  <div id="terror_list">
         <span><h1>Terror Data Details:</h1></span>
         <span>(click on Bar in graph to display information)</span>   
         <div id="divTableBody">
@@ -524,6 +525,6 @@ function loadWeatherDetailGraph(key, data) {
                 <div class="divTableCell headtags">Additional Note</div>
             </div>
         </div>     
-    </div>
+    </div> -->
 </body>
 
