--- a/Terror_Data.html
+++ b/Terror_Data.html
@@ -227,7 +227,7 @@ var xAxisD = d3.axisBottom(xD)
 
 var yAxisD = d3.axisLeft(yD);
 
-var svg2 = d3.select("#weatherDetail").append("svg")
+/* var svg2 = d3.select("#weatherDetail").append("svg")
             .attr("width", width + margin.left + margin.right)
             .attr("height", height + margin.top + margin.bottom)
         .append("g")
@@ -248,7 +248,7 @@ function filteredWeather(data, key) {
    return data.filter(function (a) {    
         return (yearFormat(a.MESS_DATUM) == key); 
     });
-};
+}; */
 
         
 
@@ -465,7 +465,7 @@ function displayTerrorData(barData, dataset) {
 
 function loadWeatherDetailGraph(key, data) {
 
-    var data = filteredWeather(data, key);
+   /*  var data = filteredWeather(data, key);
     // Scale the range of the data
     xD.domain(d3.extent(data, function(d) { return d.MESS_DATUM; }));
     yD.domain([0, d3.max(data, function(d) { return d.RSK; })]);
@@ -488,7 +488,7 @@ function loadWeatherDetailGraph(key, data) {
             .call(xAxisD);
             svg2.select(".y.axis") // change the y axis
             .duration(150)
-            .call(yAxisD);
+            .call(yAxisD); */
     
 
 
