--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             </div>
             <svg id="svg"></svg>                            
             <div id="weatherDetail"></div>
-            <div><img style="margin-left: 50px;" alt="Graph Legend" src="/InfoVis/img/legend.png"></div>
+            <div><img style="margin-left: 50px;" alt="Graph Legend" src="/img/legend.png"></div>
         </div>
     </div>
     <div id="terror_data">
