--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
 		    font-family: arial;
 		    font-size: 12px;
 	    }
-
+        .detailGraph path.line {
+            stroke: #0c7d99;
+        }
 	    path.line {
 		    fill: none;
 		    stroke: #e4521b;
