--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@ function loadGoogleMap(geoData) {
                     '<div class="divTableCell headtags">Target</div><div class="divTableCell content">'+data['target']+'</div>'+
                 '</div>' +
                 '<div class="divTableRow">'+
-                    '<div class="divTableCell headtags">Group</div><div class="divTableCell content">'+data['group']+'</div>'+
+                    '<div class="divTableCell headtags">Group</div><div class="divTableCell content">'+data['gname']+'</div>'+
                 '</div>' +
                 '<div class="divTableRow">'+
                     '<div class="divTableCell headtags">Killed</div><div class="divTableCell content">'+data['killed']+'</div>'+
